# cbnf

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  cbnf.cbnf  justfile
cbnf/: Cargo.toml
cbnf-ls/: Cargo.toml
cbnf-ls/src/: lib.rs  main.rs
cbnf/src/: lexer.rs  lib.rs  parser.rs  span.rs  util.rs
cbnf/src/lexer/: cursor.rs  test.rs  token.rs  unescape.rs
cbnf/src/lexer/unescape/: test.rs
cbnf/src/parser/: error.rs  test.rs
tree-sitter-cbnf/: Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py
tree-sitter-cbnf/bindings/c/: tree-sitter-cbnf.pc.in
tree-sitter-cbnf/bindings/go/: binding.go  binding_test.go
tree-sitter-cbnf/bindings/node/: binding.cc
tree-sitter-cbnf/bindings/python/tests/: test_binding.py
tree-sitter-cbnf/bindings/python/tree_sitter_cbnf/: __init__.py  binding.c
tree-sitter-cbnf/bindings/rust/: build.rs  lib.rs
tree-sitter-cbnf/bindings/swift/TreeSitterCbnf/: cbnf.h
tree-sitter-cbnf/bindings/swift/TreeSitterCbnfTests/: TreeSitterCbnfTests.swift
tree-sitter-cbnf/queries/cbnf/: highlights.scm
tree-sitter-cbnf/src/: grammar.json  node-types.json  parser.c
