[workspace]
members = ["cbnf", "cbnf-ls"]
resolver = "2"

[workspace.lints.rust]
unsafe_code = "forbid"
# missing_docs = "deny"
future_incompatible = { level = "deny", priority = -1 }

[workspace.lints.rustdoc]
all = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }

enum_glob_use = "allow"
equatable_if_let = "allow"
wildcard_imports = "allow"
module_name_repetitions = "allow"
